<resources>
    <string name="app_name">ArtPlace</string>
    <string name="error_msg">No Internet connection.  \nPlease try again.</string>
    <string name="artist_name">Artist</string>
    <string name="favorites">Favorites</string>
    <string name="empty_msg">No favorite \nitems added yet.</string>
    <string name="delete_all">Delete All</string>
    <string name="favorites_title">Favorites</string>
    <string name="appwidget_text">No favorite artworks saved. \nFind yours by clicking on: </string>
    <string name="thumbnail_widget_description">Image of the saved artwork.</string>
    <string name="current_artwork_description">Image of the current artwork.</string>
    <string name="refresh_button_description">Refresh button for trying to fetch data from network.</string>
    <string name="detail_image_description">Detail image of the selected artwork.</string>
    <string name="location_label">Location</string>
    <string name="dimensions_label">Dimensions</string>
    <string name="medium_label">Medium</string>
    <string name="category_label">Category</string>
    <string name="detail_image_artist_description">Detail image of the clicked Artist.</string>
    <string name="hometown_label">Hometown</string>
    <string name="nationality_label">Nationality</string>
    <string name="image_thumbnail_description">Artwork image thumbnail from favorites.</string>
    <string name="fab_contentDecription">Button for saving the item into Favorites.</string>
    <string name="refresh">Refresh</string>
    <string name="snackbar_no_network_connection">No Network connection. Please try again.</string>
    <string name="snackbar_no_data_for_artist">Sorry, No data for this artwork.</string>
    <string name="snackbar_deleted_item">This item was deleted!</string>
    <string name="snackbar_item_added">Item added to favorites</string>
    <string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="not_applicable">N/A</string>
    <string name="snackbar_no_data_artist">Sorry, No data for this artist.</string>
    <string name="snackbar_item_removed">Item removed from the favorites</string>
    <string name="delete_all_message">Are you sure you want to delete all artworks?</string>
    <string name="delete_all_title">Delete All</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="analytics_artwork_screenname">Artworks-Gridview</string>
    <string name="network_ok">All good with your Network connection!</string>
    <string name="no_network">No Network connection!</string>

    <!-- Menu items -->
    <string name="search">Search</string>
    <string name="search_hint">Search artist or genre</string>
    <string name="action_random">Random Search</string>
    <string name="action_artist">Artist</string>
    <string name="action_artwork">Artwork</string>
    <string name="action_genre">Genre</string>
    <string name="action_show">Show</string>
    <string name="action_all">All</string>
    <string name="loading_results_message">Loading results&#8230;</string>
    <string name="no_data_found">No data found</string>
    <string name="title_artworks">Artworks</string>
    <string name="title_search">Search the Art World</string>
    <string name="title_favorites">Favorites</string>
    <string name="information_label">Information</string>
    <string name="museum_label">Museum</string>
    <string name="menu_share">Share</string>
    <string name="artist_label">Artist</string>
    <string name="similar_artworks_label">Similar Artworks</string>
    <string name="read_more_button">Read more on artsy.net</string>
    <string name="biography_label">Biography</string>
    <string name="start_at">Start at</string>
    <string name="end_at">End at</string>
    <string name="press">Press</string>
    <string name="description">Description</string>
    <string name="full_title">Full Title</string>
    <string name="menu_search_artworks">Search Artworks</string>
    <string name="menu_title_dark">Go dark</string>
    <string name="menu_title_light">Go light</string>
    <string name="empty_text_search_result">Oops, \nno results found.</string>
    <string name="genre_type">genre</string>
    <string name="search_results_title">More results for \n%1$s</string>
    <string name="genre_name">[ %1$s ]</string>
</resources>
