<?xml version="1.0" encoding="utf-8"?><!--
  ~ PROJECT LICENSE
  ~ This project was submitted by Iva Ivanova as part of the Nanodegree at Udacity.
  ~
  ~ According to Udacity Honor Code we agree that we will not plagiarize (a form of cheating) the work of others. :
  ~ Plagiarism at Udacity can range from submitting a project you didn’t create to copying code into a program without
  ~ citation. Any action in which you misleadingly claim an idea or piece of work as your own when it is not constitutes
  ~ plagiarism.
  ~ Read more here: https://udacity.zendesk.com/hc/en-us/articles/360001451091-What-is-plagiarism-
  ~
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Iva Ivanova
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_search_artworks"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />-->

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_24dp"
        android:orderInCategory="200"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_dark_mode"
        android:icon="@drawable/ic_refresh_24dp"
        android:orderInCategory="300"
        android:title="@string/menu_title_dark"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_light_mode"
        android:icon="@drawable/ic_refresh_24dp"
        android:orderInCategory="300"
        android:title="@string/menu_title_light"
        app:showAsAction="never" />

</menu>