<?xml version="1.0" encoding="utf-8"?><!--
  ~ PROJECT LICENSE
  ~ This project was submitted by Iva Ivanova as part of the Nanodegree at Udacity.
  ~
  ~ According to Udacity Honor Code we agree that we will not plagiarize (a form of cheating) the work of others. :
  ~ Plagiarism at Udacity can range from submitting a project you didn’t create to copying code into a program without
  ~ citation. Any action inSize which you misleadingly claim an idea or piece of work as your own when it is not constitutes
  ~ plagiarism.
  ~ Read more here: https://udacity.zendesk.com/hc/en-us/articles/360001451091-What-is-plagiarism-
  ~
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Iva Ivanova
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ inSize the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included inSize all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  ~
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_artwork"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?colorButtonNormal"
            android:fitsSystemWindows="true"
            app:collapsedTitleGravity="start"
            app:contentScrim="?attr/colorOnSurface"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <FrameLayout
                android:id="@+id/photo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/blurry_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="?colorOnSurface" />

                <ImageView
                    android:id="@+id/artwork_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/detail_image_description"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitStart"
                    android:src="?colorOnSurface" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bg_protect_height"
                    android:background="@drawable/photo_background_protection"
                    android:fitsSystemWindows="true" />

            </FrameLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        app:behavior_overlapTop="@dimen/overlap_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/artwork_detail_cardview" />

            <TextView
                android:id="@+id/artist_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:paddingStart="@dimen/padding_6dp"
                android:paddingLeft="@dimen/padding_6dp"
                android:paddingTop="@dimen/padding_6dp"
                android:paddingEnd="@dimen/padding_6dp"
                android:paddingRight="@dimen/padding_6dp"
                android:text="@string/artist_label"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/color_on_secondary"
                android:fontFamily="@font/work_sans_light" />

            <include layout="@layout/artist_detail_cardview" />

            <TextView
                android:id="@+id/similar_artworks_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:paddingStart="@dimen/padding_6dp"
                android:paddingLeft="@dimen/padding_6dp"
                android:paddingTop="@dimen/padding_6dp"
                android:paddingEnd="@dimen/padding_6dp"
                android:paddingRight="@dimen/padding_6dp"
                android:text="@string/similar_artworks_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:fontFamily="@font/amethysta" />

            <include layout="@layout/similar_artworks_cardview" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fab_contentDecription"
        android:tint="@android:color/white"
        app:behavior_autoHide="false"
        app:fabSize="normal"
        app:layout_anchor="@id/bottom_app_bar"
        app:layout_anchorGravity="bottom|center_horizontal"
        app:pressedTranslationZ="@dimen/fab_pressed_transition"
        app:srcCompat="@drawable/ic_favorite_border_24dp" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="bottom|center_horizontal"
        android:backgroundTint="?colorOnSurface"
        android:outlineAmbientShadowColor="?colorSurface"
        android:outlineSpotShadowColor="?colorSurface"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:fabAlignmentMode="center"
        app:fabCradleMargin="6dp"
        app:fabCradleRoundedCornerRadius="25dp"
        tools:targetApi="p" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>