<?xml version="1.0" encoding="utf-8"?><!--
  ~ PROJECT LICENSE
  ~ This project was submitted by Iva Ivanova as part of the Nanodegree at Udacity.
  ~
  ~ According to Udacity Honor Code we agree that we will not plagiarize (a form of cheating) the work of others. :
  ~ Plagiarism at Udacity can range from submitting a project you didn’t create to copying code into a program without
  ~ citation. Any action in which you misleadingly claim an idea or piece of work as your own when it is not constitutes
  ~ plagiarism.
  ~ Read more here: https://udacity.zendesk.com/hc/en-us/articles/360001451091-What-is-plagiarism-
  ~
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Iva Ivanova
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  ~
  -->

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/show_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_horizontal_cardview"
    android:layout_marginLeft="@dimen/margin_horizontal_cardview"
    android:layout_marginEnd="@dimen/margin_horizontal_cardview"
    android:layout_marginRight="@dimen/margin_horizontal_cardview"
    android:layout_marginBottom="@dimen/margin_bottom_cardview"
    android:visibility="gone"
    app:cardBackgroundColor="?colorOnSurface"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp"
    app:cardPreventCornerOverlap="true"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/background_1"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:alpha="0.5"
            android:background="@drawable/ic_red_dot_big"
            android:scaleX="1.5"
            android:scaleY="1.3"
            android:translationY="-100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/artwork_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/show_gene_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/work_sans_medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding_10dp"
                android:textColor="@color/color_surface"
                android:textIsSelectable="true"
                android:textSize="22sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Renaissance Art"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/show_start_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/work_sans_light"
                android:text="@string/start_at"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_gene_name"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/show_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/work_sans"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/show_start_label"
                app:layout_constraintTop_toBottomOf="@+id/show_start_label"
                tools:text="2017-04-16"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/show_end_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/work_sans_light"
                android:text="@string/end_at"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_start_date"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/show_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/work_sans"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/show_end_label"
                app:layout_constraintTop_toBottomOf="@+id/show_end_label"
                tools:text="2016-11-19"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/show_description_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/work_sans_light"
                android:text="@string/description"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_end_date"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/show_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/work_sans"
                android:lineSpacingExtra="6dp"
                android:paddingBottom="24dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/show_description_label"
                app:layout_constraintTop_toBottomOf="@+id/show_description_label"
                tools:text="Description of the show here Description of the show here Description of the show here Description of the show here "
                tools:visibility="visible" />

            <TextView
                android:id="@+id/show_press_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/work_sans_light"
                android:text="@string/press"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_description"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/show_press_release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/work_sans"
                android:lineSpacingExtra="6dp"
                android:paddingBottom="24dp"
                android:textIsSelectable="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/show_press_label"
                app:layout_constraintTop_toBottomOf="@+id/show_press_label"
                tools:text="Content Press Release Content Press Release Content Press Release Content Press Release"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
